--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,17 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+# PostgreSQL Connection
+# Local: postgresql://postgres:password@localhost:5432/wildians
+# Supabase Cloud: postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-[REGION].pooler.supabase.com:6543/postgres
+DATABASE_URI=
+
+# Payload Secret (generate with: openssl rand -base64 32)
+PAYLOAD_SECRET=
+
+# S3 Storage Configuration
+S3_BUCKET=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_REGION=
+S3_ENDPOINT=  # Optional: for S3-compatible services like Supabase Storage
+
+# Server Configuration
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
