--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@payloadcms/db-postgres": "3.65.0",
     "@payloadcms/next": "3.65.0",
     "@payloadcms/richtext-lexical": "3.65.0",
+    "@payloadcms/storage-s3": "^3.65.0",
     "@payloadcms/ui": "3.65.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
