Use env vars for admin seeding, fix DB password encoding

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ S3_ENDPOINT=  # Optional: for S3-compatible services like Supabase Storage
 
 # Server Configuration
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+# Initial Super Admin (created on first startup if no admins exist)
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
