WIP markdown field

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@payloadcms/richtext-lexical": "3.65.0",
     "@payloadcms/storage-s3": "^3.65.0",
     "@payloadcms/ui": "3.65.0",
+    "@uiw/react-md-editor": "^4.0.11",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
