--- a/package.json
+++ b/package.json
@@ -25,31 +25,31 @@
     "@payloadcms/storage-s3": "^3.65.0",
     "@payloadcms/ui": "3.65.0",
     "cross-env": "^7.0.3",
-    "dotenv": "16.4.7",
+    "dotenv": "^16.4.7",
     "graphql": "^16.8.1",
-    "next": "15.5.9",
+    "next": "^15.5.9",
     "payload": "3.65.0",
-    "react": "19.1.4",
-    "react-dom": "19.1.4",
-    "sharp": "0.34.2"
+    "react": "^19.1.4",
+    "react-dom": "^19.1.4",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
-    "@playwright/test": "1.56.1",
-    "@testing-library/react": "16.3.0",
+    "@playwright/test": "^1.56.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.5.4",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
-    "@vitejs/plugin-react": "4.5.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.5.9",
-    "jsdom": "26.1.0",
-    "playwright": "1.56.1",
-    "playwright-core": "1.56.1",
+    "eslint-config-next": "^15.5.9",
+    "jsdom": "^26.1.0",
+    "playwright": "^1.56.1",
+    "playwright-core": "^1.56.1",
     "prettier": "^3.4.2",
-    "typescript": "5.7.3",
-    "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.3"
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.3"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0",
