--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.65.0",
+    "@payloadcms/db-mongodb": "3.65.0",
     "@payloadcms/next": "3.65.0",
     "@payloadcms/richtext-lexical": "3.65.0",
     "@payloadcms/storage-s3": "^3.65.0",
