--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# env files
+.env*
+!.env.example
 
 # vercel
 .vercel
@@ -39,7 +40,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.env
 docker-compose.override.yml
 CLAUDE.md
 pipeline.log
